# goPhish

./: Anchor.toml  README.md  package-lock.json
programs/go_phish/: Cargo.toml
programs/go_phish/src/: lib.rs
programs_py/: go_phish.py
tests/: go_phish.ts
